# pycach_remover

./: .gitignore  README.md  pyproject.toml
src/pycache_remove/: main.py
