[project]
name = "pycache-remove"
version = "0.1.0"
description = ""
authors = [
    {name = "S29Ducky",email = "nbarasraso@edenschool.fr"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyinstaller (>=6.18.0,<7.0.0)"
]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"

[tool.poetry.scripts]
remove = "pycache_remove.main:verify_admin"

[tool.poetry]
packages = [{include = "pycache_remove", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
